- Fixed a lot of bugs, fixed almost all translation issues, fixed almost all pages that werent in dark mode, fixed bug in itinerary details page where it did not let user click on completed itinerary pages, fixed UI of download button, fixed bug on Achievements.jsx where it only showed 0/9 and not 0/10, complete button is now unclickable and fixed translation on Achievements.jsx page

--- a/src/Components/Achievements/Achievements.css
+++ b/src/Components/Achievements/Achievements.css
@@ -312,11 +312,13 @@
     margin-top: 8px;
 }
 
+.disabledButton {
+    cursor: default !important;
+    pointer-events: none !important;
+}
 
 
-
-
-
-
-
-
+html[data-theme='dark'] .achievementsTitle,
+html[data-theme='dark'] .progressText {
+    color: #000000;
+}
